ExprParser.java
// Generated from Expr.g4 by ANTLR 4.13.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CREATE=1, TABLE=2, PRIMARY=3, KEY=4, NOT=5, NULL=6, UNIQUE=7, INSERT=8, 
		INTO=9, VALUES=10, SELECT=11, FROM=12, WHERE=13, ORDER=14, BY=15, ASC=16, 
		DESC=17, UPDATE=18, SET=19, IS=20, DELETE=21, INT=22, VARCHAR=23, DECIMAL=24, 
		CHAR=25, DATE=26, TIME=27, DATETIME=28, ID=29, WS=30, COMENTARIO_SIMPLE=31, 
		COMENTARIO_MULTILINEA=32, INT_LITERAL=33, FLOAT_LITERAL=34, CHAR_LITERAL=35, 
		DATE_LITERAL=36, TIME_LITERAL=37, DATETIME_LITERAL=38, PARENTESIS_IZQ=39, 
		PARENTESIS_DER=40, COMA=41, PUNTO_Y_COMA=42, IGUAL=43, DIFERENTE=44, MAYOR=45, 
		MENOR=46, MAYOR_O_IGUAL=47, MENOR_O_IGUAL=48, MAS=49, MENOS=50, PRODUCTO=51, 
		DIVISION=52;
	public static final int
		RULE_programa = 0, RULE_sentencia = 1, RULE_creacion_tabla = 2, RULE_definiciones_columna = 3, 
		RULE_definicion_columna = 4, RULE_atributos_columna = 5, RULE_atrib_columna = 6, 
		RULE_tipo_dato = 7, RULE_insercion = 8, RULE_columna_insercion = 9, RULE_fila_insercion = 10, 
		RULE_final_insercion = 11, RULE_sfinal_insercion = 12, RULE_valores_insercion = 13, 
		RULE_valor_insercion = 14, RULE_seleccion = 15, RULE_seleccion_lista = 16, 
		RULE_seleccionar_parte = 17, RULE_seleccionar_todo = 18, RULE_condicion_seleccion = 19, 
		RULE_condicion_vacia = 20, RULE_condicion_where = 21, RULE_condicion_order = 22, 
		RULE_operador_logico = 23, RULE_expresion_logica = 24, RULE_ordenamiento = 25, 
		RULE_actualizacion = 26, RULE_condicion_actualizacion = 27, RULE_actualizacion_where = 28, 
		RULE_actualizacion_vacia = 29, RULE_actualizaciones = 30, RULE_valor_actualizacion = 31, 
		RULE_operador_aritmetico = 32, RULE_expresion_actualizacion = 33, RULE_eliminacion = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "sentencia", "creacion_tabla", "definiciones_columna", "definicion_columna", 
			"atributos_columna", "atrib_columna", "tipo_dato", "insercion", "columna_insercion", 
			"fila_insercion", "final_insercion", "sfinal_insercion", "valores_insercion", 
			"valor_insercion", "seleccion", "seleccion_lista", "seleccionar_parte", 
			"seleccionar_todo", "condicion_seleccion", "condicion_vacia", "condicion_where", 
			"condicion_order", "operador_logico", "expresion_logica", "ordenamiento", 
			"actualizacion", "condicion_actualizacion", "actualizacion_where", "actualizacion_vacia", 
			"actualizaciones", "valor_actualizacion", "operador_aritmetico", "expresion_actualizacion", 
			"eliminacion"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "'INT'", 
			"'VARCHAR'", "'DECIMAL'", "'CHAR'", "'DATE'", "'TIME'", "'DATETIME'", 
			null, null, null, null, null, null, null, null, null, null, "'('", "')'", 
			"','", "';'", "'='", null, "'>'", "'<'", "'>='", "'<='", "'+'", "'-'", 
			"'*'", "'/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CREATE", "TABLE", "PRIMARY", "KEY", "NOT", "NULL", "UNIQUE", "INSERT", 
			"INTO", "VALUES", "SELECT", "FROM", "WHERE", "ORDER", "BY", "ASC", "DESC", 
			"UPDATE", "SET", "IS", "DELETE", "INT", "VARCHAR", "DECIMAL", "CHAR", 
			"DATE", "TIME", "DATETIME", "ID", "WS", "COMENTARIO_SIMPLE", "COMENTARIO_MULTILINEA", 
			"INT_LITERAL", "FLOAT_LITERAL", "CHAR_LITERAL", "DATE_LITERAL", "TIME_LITERAL", 
			"DATETIME_LITERAL", "PARENTESIS_IZQ", "PARENTESIS_DER", "COMA", "PUNTO_Y_COMA", 
			"IGUAL", "DIFERENTE", "MAYOR", "MENOR", "MAYOR_O_IGUAL", "MENOR_O_IGUAL", 
			"MAS", "MENOS", "PRODUCTO", "DIVISION"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Expr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public List<TerminalNode> PUNTO_Y_COMA() { return getTokens(ExprParser.PUNTO_Y_COMA); }
		public TerminalNode PUNTO_Y_COMA(int i) {
			return getToken(ExprParser.PUNTO_Y_COMA, i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2361602L) != 0)) {
				{
				{
				setState(70);
				sentencia();
				setState(71);
				match(PUNTO_Y_COMA);
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaContext extends ParserRuleContext {
		public Creacion_tablaContext creacion_tabla() {
			return getRuleContext(Creacion_tablaContext.class,0);
		}
		public InsercionContext insercion() {
			return getRuleContext(InsercionContext.class,0);
		}
		public SeleccionContext seleccion() {
			return getRuleContext(SeleccionContext.class,0);
		}
		public ActualizacionContext actualizacion() {
			return getRuleContext(ActualizacionContext.class,0);
		}
		public EliminacionContext eliminacion() {
			return getRuleContext(EliminacionContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterSentencia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitSentencia(this);
		}
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentencia);
		try {
			setState(83);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CREATE:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				creacion_tabla();
				}
				break;
			case INSERT:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				insercion();
				}
				break;
			case SELECT:
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				seleccion();
				}
				break;
			case UPDATE:
				enterOuterAlt(_localctx, 4);
				{
				setState(81);
				actualizacion();
				}
				break;
			case DELETE:
				enterOuterAlt(_localctx, 5);
				{
				setState(82);
				eliminacion();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Creacion_tablaContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(ExprParser.CREATE, 0); }
		public TerminalNode TABLE() { return getToken(ExprParser.TABLE, 0); }
		public TerminalNode ID() { return getToken(ExprParser.ID, 0); }
		public TerminalNode PARENTESIS_IZQ() { return getToken(ExprParser.PARENTESIS_IZQ, 0); }
		public Definiciones_columnaContext definiciones_columna() {
			return getRuleContext(Definiciones_columnaContext.class,0);
		}
		public TerminalNode PARENTESIS_DER() { return getToken(ExprParser.PARENTESIS_DER, 0); }
		public Creacion_tablaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_creacion_tabla; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterCreacion_tabla(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitCreacion_tabla(this);
		}
	}

	public final Creacion_tablaContext creacion_tabla() throws RecognitionException {
		Creacion_tablaContext _localctx = new Creacion_tablaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_creacion_tabla);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(CREATE);
			setState(86);
			match(TABLE);
			setState(87);
			match(ID);
			setState(88);
			match(PARENTESIS_IZQ);
			setState(89);
			definiciones_columna();
			setState(90);
			match(PARENTESIS_DER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Definiciones_columnaContext extends ParserRuleContext {
		public List<Definicion_columnaContext> definicion_columna() {
			return getRuleContexts(Definicion_columnaContext.class);
		}
		public Definicion_columnaContext definicion_columna(int i) {
			return getRuleContext(Definicion_columnaContext.class,i);
		}
		public List<TerminalNode> COMA() { return getTokens(ExprParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(ExprParser.COMA, i);
		}
		public Definiciones_columnaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definiciones_columna; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterDefiniciones_columna(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitDefiniciones_columna(this);
		}
	}

	public final Definiciones_columnaContext definiciones_columna() throws RecognitionException {
		Definiciones_columnaContext _localctx = new Definiciones_columnaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_definiciones_columna);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			definicion_columna();
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(93);
				match(COMA);
				setState(94);
				definicion_columna();
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Definicion_columnaContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ExprParser.ID, 0); }
		public Tipo_datoContext tipo_dato() {
			return getRuleContext(Tipo_datoContext.class,0);
		}
		public Atributos_columnaContext atributos_columna() {
			return getRuleContext(Atributos_columnaContext.class,0);
		}
		public Definicion_columnaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion_columna; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterDefinicion_columna(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitDefinicion_columna(this);
		}
	}

	public final Definicion_columnaContext definicion_columna() throws RecognitionException {
		Definicion_columnaContext _localctx = new Definicion_columnaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_definicion_columna);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(ID);
			setState(101);
			tipo_dato();
			setState(102);
			atributos_columna(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Atributos_columnaContext extends ParserRuleContext {
		public Atributos_columnaContext atributos_columna() {
			return getRuleContext(Atributos_columnaContext.class,0);
		}
		public Atrib_columnaContext atrib_columna() {
			return getRuleContext(Atrib_columnaContext.class,0);
		}
		public Atributos_columnaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atributos_columna; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterAtributos_columna(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitAtributos_columna(this);
		}
	}

	public final Atributos_columnaContext atributos_columna() throws RecognitionException {
		return atributos_columna(0);
	}

	private Atributos_columnaContext atributos_columna(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Atributos_columnaContext _localctx = new Atributos_columnaContext(_ctx, _parentState);
		Atributos_columnaContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_atributos_columna, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			}
			_ctx.stop = _input.LT(-1);
			setState(109);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Atributos_columnaContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_atributos_columna);
					setState(105);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(106);
					atrib_columna();
					}
					} 
				}
				setState(111);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Atrib_columnaContext extends ParserRuleContext {
		public TerminalNode PRIMARY() { return getToken(ExprParser.PRIMARY, 0); }
		public TerminalNode KEY() { return getToken(ExprParser.KEY, 0); }
		public TerminalNode NOT() { return getToken(ExprParser.NOT, 0); }
		public TerminalNode NULL() { return getToken(ExprParser.NULL, 0); }
		public TerminalNode UNIQUE() { return getToken(ExprParser.UNIQUE, 0); }
		public Atrib_columnaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atrib_columna; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterAtrib_columna(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitAtrib_columna(this);
		}
	}

	public final Atrib_columnaContext atrib_columna() throws RecognitionException {
		Atrib_columnaContext _localctx = new Atrib_columnaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_atrib_columna);
		try {
			setState(117);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PRIMARY:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				match(PRIMARY);
				setState(113);
				match(KEY);
				}
				break;
			case NOT:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				match(NOT);
				setState(115);
				match(NULL);
				}
				break;
			case UNIQUE:
				enterOuterAlt(_localctx, 3);
				{
				setState(116);
				match(UNIQUE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Tipo_datoContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(ExprParser.INT, 0); }
		public TerminalNode DECIMAL() { return getToken(ExprParser.DECIMAL, 0); }
		public TerminalNode PARENTESIS_IZQ() { return getToken(ExprParser.PARENTESIS_IZQ, 0); }
		public List<TerminalNode> INT_LITERAL() { return getTokens(ExprParser.INT_LITERAL); }
		public TerminalNode INT_LITERAL(int i) {
			return getToken(ExprParser.INT_LITERAL, i);
		}
		public TerminalNode COMA() { return getToken(ExprParser.COMA, 0); }
		public TerminalNode PARENTESIS_DER() { return getToken(ExprParser.PARENTESIS_DER, 0); }
		public TerminalNode VARCHAR() { return getToken(ExprParser.VARCHAR, 0); }
		public TerminalNode CHAR() { return getToken(ExprParser.CHAR, 0); }
		public TerminalNode DATE() { return getToken(ExprParser.DATE, 0); }
		public TerminalNode TIME() { return getToken(ExprParser.TIME, 0); }
		public TerminalNode DATETIME() { return getToken(ExprParser.DATETIME, 0); }
		public Tipo_datoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_dato; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterTipo_dato(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitTipo_dato(this);
		}
	}

	public final Tipo_datoContext tipo_dato() throws RecognitionException {
		Tipo_datoContext _localctx = new Tipo_datoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_tipo_dato);
		try {
			setState(137);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
				match(INT);
				}
				break;
			case DECIMAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(120);
				match(DECIMAL);
				setState(121);
				match(PARENTESIS_IZQ);
				setState(122);
				match(INT_LITERAL);
				setState(123);
				match(COMA);
				setState(124);
				match(INT_LITERAL);
				setState(125);
				match(PARENTESIS_DER);
				}
				break;
			case VARCHAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(126);
				match(VARCHAR);
				setState(127);
				match(PARENTESIS_IZQ);
				setState(128);
				match(INT_LITERAL);
				setState(129);
				match(PARENTESIS_DER);
				}
				break;
			case CHAR:
				enterOuterAlt(_localctx, 4);
				{
				setState(130);
				match(CHAR);
				setState(131);
				match(PARENTESIS_IZQ);
				setState(132);
				match(INT_LITERAL);
				setState(133);
				match(PARENTESIS_DER);
				}
				break;
			case DATE:
				enterOuterAlt(_localctx, 5);
				{
				setState(134);
				match(DATE);
				}
				break;
			case TIME:
				enterOuterAlt(_localctx, 6);
				{
				setState(135);
				match(TIME);
				}
				break;
			case DATETIME:
				enterOuterAlt(_localctx, 7);
				{
				setState(136);
				match(DATETIME);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InsercionContext extends ParserRuleContext {
		public TerminalNode INSERT() { return getToken(ExprParser.INSERT, 0); }
		public TerminalNode INTO() { return getToken(ExprParser.INTO, 0); }
		public TerminalNode ID() { return getToken(ExprParser.ID, 0); }
		public Columna_insercionContext columna_insercion() {
			return getRuleContext(Columna_insercionContext.class,0);
		}
		public TerminalNode VALUES() { return getToken(ExprParser.VALUES, 0); }
		public Fila_insercionContext fila_insercion() {
			return getRuleContext(Fila_insercionContext.class,0);
		}
		public InsercionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_insercion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterInsercion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitInsercion(this);
		}
	}

	public final InsercionContext insercion() throws RecognitionException {
		InsercionContext _localctx = new InsercionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_insercion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(INSERT);
			setState(140);
			match(INTO);
			setState(141);
			match(ID);
			setState(142);
			columna_insercion();
			setState(143);
			match(VALUES);
			setState(144);
			fila_insercion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Columna_insercionContext extends ParserRuleContext {
